rewrote tests, added default state tests

--- a/app/templates/components/task-card/user/unselected-item.hbs
+++ b/app/templates/components/task-card/user/unselected-item.hbs
@@ -1,6 +1,5 @@
-{{log tooltipShown}}
 {{#if task.userTask.isLoading}}
-  <span class="select-inline__loading-item__icon"></span>
+  <span data-test-loading-icon class="select-inline__loading-item__icon"></span>
   <span class="select-inline__loading-item__text"></span>
 {{else}}
   <span data-test-unselected-icon class="select-inline__unselected-item__icon">
