--- a/app/templates/components/task-card/user/selected-item.hbs
+++ b/app/templates/components/task-card/user/selected-item.hbs
@@ -1,5 +1,5 @@
 {{#if select.selected}}
-  <img class="select-inline__selected-item__icon" src={{select.selected.photoThumbUrl}} />
+  <img data-test-selected-icon class="select-inline__selected-item__icon" src={{select.selected.photoThumbUrl}} />
   {{#tooltip-on-component
     class='tooltip'
     effect='none'
